# media_core

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/frontend/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/frontend/migrations/: 0001_initial.py  0002_uploadfile_user.py  0003_alter_uploadfile_file.py  0004_alter_uploadfile_file.py
apps/frontend/templates/: login.html  password_reset.html  register.html  register_success.html  upload_form.html  upload_success.html  user_dashboard.html
apps/image_processor/: admin.py  apps.py  consumer.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/image_processor/migrations/: 0001_initial.py  0002_imageprocessingresults.py  0003_alter_imageprocessingresults_blob_bucket.py  0004_alter_imageprocessingresults_blob_bucket_and_more.py  0005_uploadimage.py
media_core/: asgi.py  celery.py  middleware.py  minio_utils.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: image_preview.js
templates/: base.html
tests/: test_upload.py
